--- a/index.html
+++ b/index.html
@@ -10,12 +10,65 @@
 <body>
     <header>
         <h1>Cameron Nazemi's Journal</h1>
+        <h3>Welcome to a little journal about my past few days!</h3>
     </header>
+    <br>
     <main>
-        Test
+        <nav class="menu">
+            <i>Quick Nav:</i> 
+            <ul>
+              
+              <li><a href="#Catching-up">Day 1</a></li>
+              <li><a href="#Quiz">Day 2</a></li>
+              <li><a href="#">Day 3</a></li>
+            </ul>
+          </nav>
+        <br>
+        <hr>
+        <h2 id="Catching-up">Catching up</h2>
+        <h3><b><i>A day used to catch up on lectures</i></b></h3>
+        <section>04/09/21</section>
+        <section>
+            <p>
+            I've been a bit behind on my work lately, it may be because I can't get over the fact that Spring break was only 1 week. Regardless, I have a quiz for CSE 101 that I need to first watch the most recent lecture on before I can take that. Here is a list of the classes I have to watch podcasts in:
+
+            <li>CSE 130</li>
+            <li>CSE 101</li>
+            <br>
+
+            After I finish watching those lectures, I need to start the homework for CSE 130. So far this quarter has been <b><em>very</em></b> stressful.
+
+            <img class="fit-picture" src="StressMeme.jpg" alt="Grapefruit slice atop a pile of other slices">
+
+            </p>
+        </section>
+        <hr>
+        <h2 id="Quiz">Quiz Day!</h2>
+        <h3><b><i>Got a quiz today for CSE 101!</i></b></h3>
+        <section>04/10/21</section>
+        <section>
+            <p>
+            Todays the day I had a quiz for CSE 101! To start the day of studying, I tried out the practice quiz, which to my surprise was very challenging. This made me study even harder to get ready for the real thing. I had to take it before midnight tonight and it is a timed 1 hr long test. 
+
+            <li>CSE 130</li>
+            <li>CSE 101</li>
+            <br>
+
+            After I finish watching those lectures, I need to start the homework for CSE 130. So far this quarter has been <b><em>very</em></b> stressful.
+
+            <img class="fit-picture" src="StressMeme.jpg" alt="Grapefruit slice atop a pile of other slices">
+
+            </p>
+        </section>
+        <hr>
+
+        
+
     </main>
+    <br>
+    <br>
     <footer>
-        Cameron Nazemi's Journal 2021 CSE 110
+        Cameron Nazemi's Journal - CSE 110 - Email: <a href="">cnazemi@ucsd.edu</a>
     </footer>
 </body>
 </html>
