Updates to website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="warning"></div>
+        <span class="ingredient"></span>
+
         <h1>Cameron Nazemi's Journal</h1>
         <h3>Welcome to a little journal about my past few days!</h3>
     </header>
@@ -30,7 +33,7 @@
         <section>04/09/21</section>
         <section>
             <p>
-            I've been a bit behind on my work lately, it may be because I can't get over the fact that Spring break was only 1 week. Regardless, I have a quiz for CSE 101 that I need to first watch the most recent lecture on before I can take that. Here is a list of the classes I have to watch podcasts in:
+            I've been a bit behind on my work lately, it may be because I can't get over the fact that Spring break was only 1 week. Regardless, I have a quiz for CSE 101 that I need to first watch the most recent lecture on before I can take that. Here is a list of the classes I have to watch lectures in:
 
             <li>CSE 130</li>
             <li>CSE 101</li>
@@ -48,13 +51,9 @@
         <section>04/10/21</section>
         <section>
             <p>
-            Todays the day I had a quiz for CSE 101! To start the day of studying, I tried out the practice quiz, which to my surprise was very challenging. This made me study even harder to get ready for the real thing. I had to take it before midnight tonight and it is a timed 1 hr long test. 
+            Todays the day I had a quiz for CSE 101! To start the day of studying, I tried out the practice quiz, which to my surprise was very challenging. This made me study even harder to get ready for the real thing. I had to take it before midnight tonight and it is a timed 1 hr long test. After I want to play my favorite video game
 
-            <li>CSE 130</li>
-            <li>CSE 101</li>
-            <br>
-
-            After I finish watching those lectures, I need to start the homework for CSE 130. So far this quarter has been <b><em>very</em></b> stressful.
+            
 
             <img class="fit-picture" src="StressMeme.jpg" alt="Grapefruit slice atop a pile of other slices">
 
