--- a/index.html
+++ b/index.html
@@ -154,16 +154,17 @@
 
             <br>
             <br>
-            <label for="ice-cream-choice">Choose a flavor:</label>
-                <input list="ice-cream-flavors" id="ice-cream-choice" name="ice-cream-choice" />
+            <label for="stress-level">How stressed are you feeling out of 5?:</label>
+                <input list="stress-number" id="stress-level" name="stress-level" />
 
-                <datalist id="ice-cream-flavors">
-                    <option value="Chocolate">
-                    <option value="Coconut">
-                    <option value="Mint">
-                    <option value="Strawberry">
-                    <option value="Vanilla">
+                <datalist id="stress-number">
+                    <option value="1">
+                    <option value="2">
+                    <option value="3">
+                    <option value="4">
+                    <option value="5">
                 </datalist>
+
 
             <br>
             <br>
@@ -171,6 +172,9 @@
               <input type="submit" value="Save">
             </div>
           </form>
+
+
+          
 
 
 
