--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cameron Nazemi's Journal</title>
     <link rel="shortcut icon" type="image/png" href="Favicon.png"/>
-    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
